# health-assistant

./: .env.example  .gitignore  CHANGELOG.md  NOTICE  Procfile.dev  README.md  test_search.py
.github/: FUNDING.yml  dependabot.yml
backend/: .env.example  .gitignore  Dockerfile.worker  README.md  SETUP.md  alembic.ini  diagnose_services.sh  generate-requirements.sh  pytest.ini  requirements.optional.txt  requirements.txt  restart-celery.sh  restart-services.sh  restart_worker.sh  run-tests.sh
docker/: .env.example  Dockerfile  Dockerfile.frontend  Dockerfile.worker  README.md  docker-compose-dev.yml  docker-compose.dev-db.yml  docker-compose.dev.yml  docker-compose.fhir.yml  docker-compose.prod.yml  docker-compose.standalone.yml  docker-compose.yml  init-db.sql  init-test-db.sh  nginx.conf  recreate-dev-db.sh
docs/: AI_PROVIDER_IMPLEMENTATION.md  AI_PROVIDER_TESTS.md  AI_SYSTEM.md  API.md  ARCHITECTURE.md  CI_CD_SETUP.md  CLINICAL_EVENTS.md  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  EXPORT_IMPORT.md  FHIR_R4_FACADE.md  GETTING_STARTED_GUIDE.md  INSTALL.md  INTEGRATIONS_FRAMEWORK.md  INTEGRATIONS_SDK.md  MOBILE_SYNC_APP.md  NOTIFICATION_SYSTEM.md  ONTOLOGY_CATALOG.md  PROJECT_STRUCTURE.md  RELEASE_PROCESS.md  SCREENSHOTS.md  SEEDING_AND_DEMOS.md  STATUS.md  TASK_DEBUGGING.md  TASK_DEBUGGING_GUIDE.md  TAXONOMY.md  (+6 more)
integrations/health_assistant_bridge/python-sdk/: pyproject.toml
integrations/health_assistant_bridge/python-sdk/examples/: interactive_sync.py
integrations/health_assistant_bridge/python-sdk/health_assistant_bridge/: __init__.py  async_client.py  models.py
(+1381 files in other folders)
